--- a/edTech.UI/ClientApp/src/app/admin/topics/topics.component.html
+++ b/edTech.UI/ClientApp/src/app/admin/topics/topics.component.html
@@ -1,1 +1,28 @@
-<p>topics works!</p>
+<h2>Course List</h2>
+<hr>
+<a [routerLink]="['/admin/topic']" class="btn btn-primary">Create</a>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Status</th>
+            <th>Course</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of topics">
+            <td>{{item.id}}</td>
+            <td>{{item.topicName}}</td>
+            <td>{{item.isActive}}</td>   
+            <td>{{item.courseId}}</td>          
+            <td>
+                <a [routerLink]="['/admin/topic',item.id]" class="btn btn-success">Edit</a>
+                &nbsp; <a (click)="deleteTopic(item.id)" class="btn btn-danger">Delete</a>
+            </td>
+            
+        </tr>
+    </tbody>
+</table>
