--- a/edTech.UI/ClientApp/src/app/admin/shared/header/header.component.html
+++ b/edTech.UI/ClientApp/src/app/admin/shared/header/header.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link text-dark" [routerLink]="['/admin/courses']">Courses</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-dark" [routerLink]="['/admin/topics']">Topics</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-dark" [routerLink]="['/admin/mentors']">Mentors</a>
         </li>
       </ul>
