--- a/edTech.UI/ClientApp/src/app/admin/topic/topic.component.html
+++ b/edTech.UI/ClientApp/src/app/admin/topic/topic.component.html
@@ -7,9 +7,7 @@
             <label class="control-label">Course</label>
             <select class="form-control" name="courseId" formControlName="courseId">
                 <option [value]="''">-Select-</option>
-                <option value="1">Cloud</option>
-                <option value="2">Web Development</option>
-                <option value="3">Programming</option>
+                <option *ngFor="let item of courses" [value]="item.id">{{item.name}}</option>
             </select>
             <div *ngIf="topicForm.controls['courseId'].errors && (form.submitted || topicForm.controls['courseId'].dirty)"
                 class="text-danger">
@@ -31,13 +29,12 @@
                 class="text-danger">
                 <span [hidden]="!topicForm.controls['sequence'].errors.required">Please Enter Sequence</span>
             </div>
-        </div>      
+        </div>
         <div class="form-group">
             <label class="control-label">Status</label>
             <select class="form-control" name="isActive" formControlName="isActive">
-                <option [value]="''">-Select-</option>
-                <option value="1">Active</option>
-                <option value="0">InActive</option>
+                <option value="true">Active</option>
+                <option value="false">InActive</option>
             </select>
             <div *ngIf="topicForm.controls['isActive'].errors && (form.submitted || topicForm.controls['isActive'].dirty)"
                 class="text-danger">
