--- a/edTech.UI/ClientApp/src/app/admin/topics/topics.component.html
+++ b/edTech.UI/ClientApp/src/app/admin/topics/topics.component.html
@@ -1,4 +1,4 @@
-<h2>Course List</h2>
+<h2>Topic List</h2>
 <hr>
 <a [routerLink]="['/admin/topic']" class="btn btn-primary">Create</a>
 
@@ -8,7 +8,6 @@
             <th>Id</th>
             <th>Name</th>
             <th>Status</th>
-            <th>Course</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -16,13 +15,12 @@
         <tr *ngFor="let item of topics">
             <td>{{item.id}}</td>
             <td>{{item.topicName}}</td>
-            <td>{{item.isActive}}</td>   
-            <td>{{item.courseId}}</td>          
+            <td>{{item.isActive}}</td>          
             <td>
                 <a [routerLink]="['/admin/topic',item.id]" class="btn btn-success">Edit</a>
+                &nbsp;<a [routerLink]="['/admin/topic',item.id,'lessons']" class="btn btn-success">Lessons</a>
                 &nbsp; <a (click)="deleteTopic(item.id)" class="btn btn-danger">Delete</a>
             </td>
-            
         </tr>
     </tbody>
 </table>
