--- a/edTech.UI/ClientApp/src/app/admin/lesson/lesson.component.html
+++ b/edTech.UI/ClientApp/src/app/admin/lesson/lesson.component.html
@@ -63,7 +63,7 @@
     </div>
     <div class="form-group">
       <input type="submit" value="Save" class="btn btn-primary" /> &nbsp;&nbsp;
-      <a [routerLink]="['/admin/topic',this.topicId]" class="btn btn-warning">Cancel</a>
+      <a [routerLink]="['/admin/topic',this.topicId,'lessons']" class="btn btn-warning">Cancel</a>
     </div>
   </form>
 </div>
