--- a/edTech.UI/ClientApp/src/app/public/home/home.component.html
+++ b/edTech.UI/ClientApp/src/app/public/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="background: #b3d1f0">
     <div class="container">
         <div class="row">
@@ -22,3 +23,4 @@
 <div class="container pb-4">
     <app-courselist></app-courselist>
 </div>
+<app-footer></app-footer>
