--- a/edTech.UI/ClientApp/src/app/public/shared/courselist/courselist.component.html
+++ b/edTech.UI/ClientApp/src/app/public/shared/courselist/courselist.component.html
@@ -4,7 +4,9 @@
 <div class="row">
     <div class="col-sm-4 pb-4" *ngFor="let item of courses">
         <div class="card box-shadow">
-            <img class="card-img-top" src={{item.imageUrl}} alt=" image" style="width:100%; height: 169px;">
+            <a [href]="item.Url">
+                <img class="card-img-top" src={{item.imageUrl}} alt=" image" style="width:100%; height: 169px;">
+            </a>
             <div class="card-body">
                 <h4 class="card-title">{{item.name}} <span class="float-right font-20">₹{{item.unitPrice}}</span></h4>
                 <p class="card-text">{{item.summary}}</p>
