--- a/edTech.UI/ClientApp/src/app/public/course/course.component.html
+++ b/edTech.UI/ClientApp/src/app/public/course/course.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="border-bottom: 1px solid #e0dada; background: #e7eaed">
   <div class="container">
     <div class="row">
@@ -8,7 +9,7 @@
             Get the skills you need to transform your career and be step ahead!
           </p>
           <p>
-            <a href="#heading" class="btn btn-primary">START LEARNING NOW</a>
+            <a [routerLink]="['/player','angular']" class="btn btn-primary">START LEARNING NOW</a>
           </p>
         </div>
       </div>
@@ -157,3 +158,5 @@
       </div>
     </div>
   </div>
+</div>
+<app-footer></app-footer>  
