--- a/edTech.UI/ClientApp/src/app/public/shared/courselist/courselist.component.html
+++ b/edTech.UI/ClientApp/src/app/public/shared/courselist/courselist.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-sm-4 pb-4" *ngFor="let item of courses">
         <div class="card box-shadow">
-            <a [href]="item.Url">
+            <a [routerLink]="[item.url]">
                 <img class="card-img-top" src={{item.imageUrl}} alt=" image" style="width:100%; height: 169px;">
             </a>
             <div class="card-body">
