--- a/edTech.UI/ClientApp/src/app/public/course/course.component.html
+++ b/edTech.UI/ClientApp/src/app/public/course/course.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-8">
         <div class="pt-5 pb-4">
-          <h1>Angular For Beginners</h1>
+          <h1>{{course.name}}</h1>
           <p class="pb-4">
             Get the skills you need to transform your career and be step ahead!
           </p>
@@ -27,42 +27,15 @@
 <div class="container pt-4">
   <div class="row">
     <div class="col-sm-8">
-      <h2>Description</h2>
-      <p>
-        Per consequat adolescens ex, cu nibh commune temporibus vim, ad sumo viris eloquentiam sed. Mea appareat
-        omittantur eloquentiam ad, nam ei quas oportere democritum. Prima causae admodum id est, ei timeam
-        inimicus sed. Sit an meis aliquam, cetero inermis vel ut. An sit illum euismod facilisis, tamquam
-        vulputate pertinacia eum at.
-      </p>
-      <h3>What will you learn</h3>
-      <ul>
-        <li>
-          <p>
-            Ut unum diceret eos, mel cu velit principes, ut quo inani dolorem mediocritatem. Mea in justo
-            posidonium necessitatibus.
-          </p>
-        </li>
-        <li>
-          <p>
-            Ut unum diceret eos, mel cu velit principes, ut quo inani dolorem mediocritatem. Mea in justo
-            posidonium necessitatibus.
-          </p>
-        </li>
-        <li>
-          <p>
-            Ut unum diceret eos, mel cu velit principes, ut quo inani dolorem mediocritatem. Mea in justo
-            posidonium necessitatibus.
-          </p>
-        </li>
-      </ul>
+      {{course.description}}
       <h3>Course Lessons</h3>
       <div class="accordion mb-4" id="accordionLessons">
-        <div class="card">
+        <div class="card" *ngFor="let topic of course.courseTopics">
           <div class="card-header" id="headingOne">
             <h5 class="mb-0">
               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                Angular Fundamentals
+                {{topic.topicName}}
               </button>
             </h5>
           </div>
@@ -70,57 +43,8 @@
             <div class="card-body">
               <div class="list_lessons">
                 <ul>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health
-                      Science</a><span>00:59</span></li>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health and Social Care</a><span>00:59</span></li>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health
-                    Science</a><span>00:59</span></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h5 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo"
-                aria-expanded="false" aria-controls="collapseTwo">
-                Angular Forms
-              </button>
-            </h5>
-          </div>
-          <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionLessons">
-            <div class="card-body">
-              <div class="list_lessons">
-                <ul>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health
-                      Science</a><span>00:59</span></li>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health and Social Care</a><span>00:59</span></li>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health
-                    Science</a><span>00:59</span></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree"
-                aria-expanded="false" aria-controls="collapseThree">
-                Angular Services
-              </button>
-            </h5>
-          </div>
-          <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordionLessons">
-            <div class="card-body">
-              <div class="list_lessons">
-                <ul>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health
-                      Science</a><span>00:59</span></li>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health and Social Care</a><span>00:59</span></li>
-                  <li><a href="https://www.youtube.com/watch?v=LDgd_gUcqCw"><i class="bi bi-play-circle"></i> Health
-                    Science</a><span>00:59</span></li>
+                  <li *ngFor="let lesson of topic.lessons">
+                    <a><i class="bi bi-play-circle"></i> {{lesson.lessonName}}</a><span>{{lesson.duration}}</span></li>
                 </ul>
               </div>
             </div>
