--- a/edTech.UI/ClientApp/src/app/public/course/course.component.html
+++ b/edTech.UI/ClientApp/src/app/public/course/course.component.html
@@ -9,7 +9,7 @@
             Get the skills you need to transform your career and be step ahead!
           </p>
           <p>
-            <a [routerLink]="['/player','angular']" class="btn btn-primary">START LEARNING NOW</a>
+            <a [routerLink]="[course.url]" class="btn btn-primary">START LEARNING NOW</a>
           </p>
         </div>
       </div>
