--- a/edTech.UI/ClientApp/src/app/public/course/course.component.html
+++ b/edTech.UI/ClientApp/src/app/public/course/course.component.html
@@ -11,9 +11,7 @@
       </div>
       <div class="col-sm-4 pt-5 pb-2">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" [src]="course.demoUrl | safe" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" [src]="course.demoUrl | safe" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -30,19 +28,17 @@
         <div class="card" *ngFor="let topic of course.courseTopics">
           <div class="card-header" id="headingOne">
             <h5 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                aria-expanded="true" aria-controls="collapseOne">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne">
                 {{topic.topicName}}
               </button>
             </h5>
           </div>
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionLessons">
+          <div id="collapseOne" class="collapse show" data-parent="#accordionLessons">
             <div class="card-body">
               <div class="list_lessons">
                 <ul>
                   <li *ngFor="let lesson of topic.lessons">
-                    <a><i class="bi bi-play-circle"></i> {{lesson.lessonName}}</a><span>{{lesson.duration}}</span>
-                  </li>
+                    <a><i class="bi bi-play-circle"></i> {{lesson.lessonName}}</a><span>{{lesson.duration}}</span></li>
                 </ul>
               </div>
             </div>
@@ -55,12 +51,10 @@
       <div class="text-center card p-4">
         <h2>{{course.unitPrice | currency:'INR'}}</h2>
         <p class="mt-2">
-          <a href="javascript:void(0)" (click)="AddToCart(course.id,course.name,course.unitPrice,1,course.imageUrl)"
-            class="btn btn-outline-primary btn-block">Add To Cart</a>
+          <a href="javascript:void(0)" (click)="AddToCart(course.id,course.name,course.unitPrice,1,course.imageUrl)" class="btn btn-outline-primary btn-block">Add To Cart</a>
         </p>
         <p>
-          <a href="javascript:void(0)" (click)="BuyNow(course.id,course.name,course.unitPrice,1,course.imageUrl)"
-            class="btn btn-info btn-block">BUY NOW</a>
+          <a href="javascript:void(0)" (click)="BuyNow(course.id,course.name,course.unitPrice,1,course.imageUrl)" class="btn btn-info btn-block">BUY NOW</a>
         </p>
       </div>
       <div class="card mt-4 p-3 mb-4">
@@ -68,7 +62,8 @@
         <p style="text-align:justify;font-size:14px;text-rendering:optimizeLegibility"></p>
         <p style="text-align:justify">{{course.mentor.biography}}<br></p>
         <div class="text-center">
-          <img class="rounded-circle" style="width:150px;height:150px;text-align:center" [src]="course.mentor.imageUrl">
+          <img class="rounded-circle" style="width:150px;height:150px;text-align:center"
+            [src]="course.mentor.imageUrl">
           <h4>{{course.mentor.name}}</h4>
           <div>{{course.mentor.title}}</div>
         </div>
@@ -76,13 +71,13 @@
     </div>
   </div>
 </div>
-<app-footer></app-footer>
+<app-footer></app-footer>  
 
 <!-- toast -->
 <div class="toast fade hide" data-autohide="false" id="toastCart">
   <div class="toast-header">
-    <strong class="mr-auto text-primary">Notification</strong>
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">×</button>
+      <strong class="mr-auto text-primary">Notification</strong>
+      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">×</button>
   </div>
   <div class="toast-body" [innerHTML]="message"></div>
 </div>
